k8s-manifests/grafana-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-internal-svc
  namespace: locker-view-ns
spec:
  type: ExternalName
  externalName: grafana.default.svc.cluster.local
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: locker-view-ns
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - "grafana.sy-locker-view.com"   # <--- 서브 도메인 사용
    secretName: sy-locker-tls-secret
  rules:
  - host: "grafana.sy-locker-view.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana-internal-svc
            port:
              number: 80
