k8s-manifests/ingress.yaml
# 파일명: ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lab-ingress
  namespace: locker-view-ns
  annotations:
    kubernetes.io/ingress.class: "nginx" # Ingress Controller가 설치되어 있어야 합니다.
    # HTTP로 접속해도 자동으로 HTTPS로 연결해주는 설정 (권장)
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "sy-locker-view.com"
    - "www.sy-locker-view.com"
    secretName: sy-locker-tls-secret # 생성한 Secret 이름과 정확히 일치해야 함
  rules:
  - host: "sy-locker-view.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-clusterip-svc # 내부 ClusterIP 서비스 이름
            port:
              number: 80
  - host: "www.sy-locker-view.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-clusterip-svc
            port:
              number: 80
